change some css to fix overlap

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -45,25 +45,24 @@
 
 body {
     display: inline-flexbox;
+    flex-direction: column;
     background-color: black;
     color: white;
 
 }
 
 #header {
-    display: inline-flexbox;
     justify-content: center;
     align-items: center;
     font-family: 'Merriweather', serif; 
-    height: 100%;
+    height: 100dvh;
 }
 #technology-stack {
-    padding-top: 25px;
-    padding-bottom: 50px;
+    display: flexbox;
     text-align: center;
     background-color: whitesmoke;
     color: black;
-    height: 100%;
+    height: 100vh;
     font-family: 'Merriweather', serif; 
 }
 
@@ -72,13 +71,13 @@ body {
 }
 
 #portfolio {
-    padding: 30px;
+    padding: 50px;
     color: white;
     text-align: center;
 }
 
 .carouselExampleDark {
-    display: block;
+    display: inline;
 }
 
 .mb-3 {
@@ -135,25 +134,12 @@ body {
     justify-content: center;
     align-items: center;
 }
-.contact-me-div
-{
-    
-    border-radius: solid;
-    border-color: white;
-    color: black;
-    padding-top: 50px;
-    width: 700px;
-    height: 50vh;
-}
 
-.contact-me-div h1 {
-    text-align: center;
-}
 .nav-box {
     display: flex;
 }
 
 .carousel-portfolio {
-    height: 100vh;
+    height: 100%;
     margin-top: 30px;
 }
